samples/_failures_safe/1761328266_e35a11_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7e3113ef.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_7e3113ef.c:171:14: error: ‘TOKEN_’ undeclared (first use in this function)
  171 |         case TOKEN_
      |              ^~~~~~
./samples/SAFE/__tmp_7e3113ef.c:171:14: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_7e3113ef.c:171:9: error: expected ‘:’ or ‘...’ at end of input
  171 |         case TOKEN_
      |         ^~~~
./samples/SAFE/__tmp_7e3113ef.c:171:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7e3113ef.c:171:9: error: expected declaration or statement at end of input
